ecmascript/parser/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction6_es5/input.ts.stderr
error: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/async/es5/asyncArrowFunction/asyncArrowFunction6_es5/input.ts:5:22
  |
5 | var foo = async (a = await): Promise<void> => {
  |                      ^^^^^

